// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Modal Bottom Sheet 1`] = `
<div>
  <div>
    <div>
      <button
        class="Buttonweb__StyledButton-gxhxmy-0 ddCfrZ Spaceweb__Space-njatzl-0 jGLucJ Sizeweb__Size-sc-10bl685-0 bPNzzG Flexweb__Flex-ni2cjg-0 dfbkqx"
        data-testid="ds-button"
        type="button"
      >
        <div
          class="Textweb__Text-sc-6jf9e4-0 dxOYOr"
          color="light.900"
          data-testid="ds-text"
        >
           Open modal
        </div>
      </button>
    </div>
    <div
      id="layerHost"
    >
      <div>
        <div
          class="Styled__DialogContainer-sc-1kl130u-0 jydBJu"
        >
          <div
            class="Styled__BottomSheet-sc-1kl130u-3 fhSJVH"
            style="transform: translateY(100%);"
          >
            <div
              class="Styled__BottomSheetHandle-sc-1kl130u-4 cZTaqx"
            />
            <div
              class="Textweb__Text-sc-6jf9e4-0 Styled__BodyText-sc-1kl130u-6 bXvHYx"
              color="shade.980"
              data-testid="ds-text"
            >
              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    id="layerHost"
  />
</div>
`;

exports[`Storyshots Modal Default Modal 1`] = `
<div>
  <div>
    <div>
      <button
        class="Buttonweb__StyledButton-gxhxmy-0 ddCfrZ Spaceweb__Space-njatzl-0 jGLucJ Sizeweb__Size-sc-10bl685-0 bPNzzG Flexweb__Flex-ni2cjg-0 dfbkqx"
        data-testid="ds-button"
        type="button"
      >
        <div
          class="Textweb__Text-sc-6jf9e4-0 dxOYOr"
          color="light.900"
          data-testid="ds-text"
        >
           Open modal
        </div>
      </button>
    </div>
    <div
      id="layerHost"
    />
  </div>
  <div
    id="layerHost"
  />
</div>
`;

exports[`Storyshots Modal Modal With Controls 1`] = `
<div>
  <div>
    <div />
    <div
      id="layerHost"
    >
      <div>
        <div
          class="Styled__DialogContainer-sc-1kl130u-0 hKOvFI"
        >
          <div
            class="Styled__Dialog-sc-1kl130u-1 dSmgIp"
            role="dialog"
          >
            <div
              class="Textweb__Text-sc-6jf9e4-0 Styled__HeaderText-sc-1kl130u-5 clEJne"
              color="shade.980"
              data-testid="ds-text"
            >
               Default Modal Header 
            </div>
            <div
              class="Textweb__Text-sc-6jf9e4-0 Styled__BodyText-sc-1kl130u-6 bXvHYx"
              color="shade.980"
              data-testid="ds-text"
            >
              Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged
            </div>
            <div
              class="Textweb__Text-sc-6jf9e4-0 Styled__FooterText-sc-1kl130u-7 jbARAn"
              color="shade.980"
              data-testid="ds-text"
            >
               Default Modal Footer
            </div>
            <div
              class="Styled__CloseIconContainer-sc-1kl130u-2 ipCwfE"
              data-testid="modalCloseButton"
            >
              <button
                class="Buttonweb__StyledButton-gxhxmy-0 bIumhE Spaceweb__Space-njatzl-0 eniLzv Sizeweb__Size-sc-10bl685-0 cwUXCl Flexweb__Flex-ni2cjg-0 dfbkqx"
                data-testid="ds-button"
                type="button"
              >
                <svg
                  fill="none"
                  height="20"
                  viewBox="0 0 24 24"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
                    fill="rgba(52, 74, 108, 1.0)"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    id="layerHost"
  />
</div>
`;
